[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Global/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Sprites/Bullet.png" type="Texture" id=3]
[ext_resource path="res://Global/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 7.91739 )

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -16 )
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="SpawnTime" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="SpawnTime" to="." method="_on_SpawnTime_timeout"]

[editable path="HitBox"]

[editable path="Hurtbox"]
